# Universal-Encryption-System

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  SECURITY.md  demo.sh  encryptor.example.toml
.github/workflows/: ci.yml  release.yml
benches/: crypto_bench.rs
docs/: ADVANCED_USAGE.md  QUICK_START.md  README.md  index.html
documentation/: ADVANCED_USAGE.md  API.md  INSTALLATION.md  QUICK_START.md  README.md  TROUBLESHOOTING.md
src/: audit.rs  config.rs  lib.rs  main.rs  security.rs
src/cli/: mod.rs
src/crypto/: encryption.rs  key_derivation.rs  mod.rs
src/format/: mod.rs
src/hardware/: mod.rs
src/signature/: mod.rs
test/: test.rs
