[package]
name = "file-encryptor"
version = "0.2.0"
edition = "2021"
authors = ["RasyaAndrean"]
description = "Universal file encryption system with advanced security features"
license = "MIT"

[dependencies]
# Cryptographic libraries
argon2 = "0.5"
aes-gcm = "0.10"
sha2 = "0.10"
ed25519-dalek = "2.0"
rand = "0.8"
zeroize = "1.6"

# CLI and parsing
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
hex = "0.4"

# System information
sysinfo = "0.29"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Compression
flate2 = "1.0"

# Progress indicator
indicatif = "0.17"

# Configuration file
toml = "0.8"

# Directory archiving
tar = "0.4"

# Password input (hidden)
rpassword = "7.3"

# Temporary files (used in dir encryption)
tempfile = "3.8"

[dev-dependencies]
tempfile = "3.8"
